--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
     "react-headroom": "^3.2.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
