--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
+    "react-snap": "^1.23.0",
+    "sitemap": "^7.1.1",
     "typed.js": "^2.1.0",
     "web-vitals": "^2.1.4"
   },
